--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -22,7 +22,7 @@
                     class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-9-desktop">
                 <div class="hamburger__container">
                     <div class="hamburger__bar"></div>
-                    <div class="hamburger__bar"></div>
+                    <div class="hamburger__bar hamburger__bar-middle"></div>
                     <div class="hamburger__bar"></div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 </defs>
               </svg>
             </div>
-            <div class="mdc-layout-grid__cell">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/startegy/">Strategy</a></li>
@@ -205,7 +205,7 @@
                     <li><a href="/team/">Team</a></li>
                 </ul>
             </div>
-            <div class="mdc-layout-grid__cell">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
                 <ul>
                     <li><a href="/case-study/">Case Study</a></li>
                     <li><a href="/investments/">Investments</a></li>
