--- a/arx.monks.cloud/src/stylesheets/contact.scss
+++ b/arx.monks.cloud/src/stylesheets/contact.scss
@@ -1,3 +1,42 @@
+/* Background for Small Devices */
+@media screen and (min-width: 1440px) {
+  body {
+    background: #fff url("/assets/img/contacts-bg.jpg") top right no-repeat;
+    background-size: 65% 600px;
+  }
+  .intro {
+    min-height: 700px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  body {
+    background: #fff url("/assets/img/contacts-bg.jpg") top right no-repeat;
+    background-size: 75% 600px;
+  }
+  .intro {
+    min-height: 700px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    background: #fff url("/assets/img/contacts-bg.jpg") bottom center no-repeat;
+    background-size: 100% 75%;
+  }
+}
+
+
+.intro {
+  min-height: 700px;
+}
+
+.intro-box {
+  padding: 2em 4em;
+}
+
+
+
 h2 {
   font-size: 38px;
   font-weight: normal;
