--- a/arx.monks.cloud/src/stylesheets/team.scss
+++ b/arx.monks.cloud/src/stylesheets/team.scss
@@ -1,3 +1,29 @@
+/* Background for Small Devices */
+@media screen and (min-width: 1440px) {
+  body {
+    background: #fff url("/assets/img/team-bg.jpg") top right no-repeat;
+    background-size: 65% 700px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  body {
+    background: #fff url("/assets/img/team-bg.jpg") top right no-repeat;
+    background-size: 75% 700px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    background: #fff url("/assets/img/team-bg.jpg") bottom center no-repeat;
+    background-size: 100% 75%;
+  }
+}
+
+.intro-box {
+  padding: 6em 4em;
+}
+
 .team {
   h2 {
     color: var(--mdc-theme--third);
