--- a/arx.monks.cloud/src/html/case-study/index.njk
+++ b/arx.monks.cloud/src/html/case-study/index.njk
@@ -2,27 +2,8 @@
 {% from "common/helpers.njk" import image %}
 
 {% block links %}
-  <style>
-    /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
-    body {
-      background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-      background-size: 60% auto;
-    }
-    @media (max-width: 1024px) {
-      body {
-        background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-        background-size: 70% auto;
-      }
-    }
-
-    .intro {
-      min-height: 700px;
-    }
-    .intro-box {
-      padding: 9em 4em;
-    }
-  </style>
-{% endblock %}
+<ink rel="stylesheet" href="/assets/css/case-studies.css">
+{% endblock %}l
 
 {% block main %}
 <section class="intro">
