--- a/arx.monks.cloud/src/html/work-with-us/index.njk
+++ b/arx.monks.cloud/src/html/work-with-us/index.njk
@@ -3,28 +3,6 @@
 
 {% block links %}
   <link rel="stylesheet" href="/assets/css/work-with-us.css">
-
-  <style>
-  /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
-  body {
-    background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-    background-size: 60% 755px;
-  }
-  @media (max-width: 1024px) {
-    body {
-      background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-      background-size: 70% auto;
-    }
-  }
-
-  .intro {
-    min-height: 700px;
-  }
-  .intro-box {
-    padding: 9em 4em;
-  }
-
-</style>
 {% endblock %}
 
 {% block main %}
@@ -125,7 +103,7 @@
           capital, or in a situation where an intermediary introduces an exclusive
           opportunity to ARX, our approach is consistent:</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="intermediaries_side-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Responsiveness and transparency</h3>
         <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level of interest in a
           transaction.</p>
