--- a/arx.monks.cloud/src/stylesheets/investments.scss
+++ b/arx.monks.cloud/src/stylesheets/investments.scss
@@ -1,3 +1,37 @@
+/* Background for Small Devices */
+@media screen and (min-width: 1440px) {
+  body {
+    background: #fff url("/assets/img/investments-bg.jpg") top right no-repeat;
+    background-size: 65% 600px;
+  }
+  .intro {
+    min-height: 500px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  body {
+    background: #fff url("/assets/img/investments-bg.jpg") top right no-repeat;
+    background-size: 75% 600px;
+  }
+  .intro {
+    min-height: 500px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    background: #fff url("/assets/img/investments-bg.jpg") bottom center no-repeat;
+    background-size: 100% 75%;
+  }
+}
+
+
+.intro-box {
+  padding: 10em 4em;
+}
+
+
 .box--text {
   .investment-description {
     min-height: 60px;
