--- a/arx.monks.cloud/src/stylesheets/news.scss
+++ b/arx.monks.cloud/src/stylesheets/news.scss
@@ -1,3 +1,39 @@
+/* Background for Small Devices */
+
+@media screen and (min-width: 1440px) {
+  body {
+    background: #fff url("/assets/img/news-bg.jpg") top right no-repeat;
+    background-size: 65% 446px;
+  }
+  .intro {
+    min-height: 500px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  body {
+    background: #fff url("/assets/img/news-bg.jpg") top right no-repeat;
+    background-size: 75% 446px;
+  }
+  .intro {
+    min-height: 320px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    background: #fff url("/assets/img/news-bg.jpg") bottom center no-repeat;
+    background-size: 100% 75%;
+  }
+}
+
+@media (min-width: 540px) {
+  .intro .intro-box {
+    padding: 1.5em 4em;
+  }
+}
+
+
 .news_page {
   article {
     h3, a {
