ARX - Homepage - Sections' backgrounds

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -30,58 +30,58 @@
   </div>
 
   <section class="about">
-    <div class="mdc-layout-grid layout-arx">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3 class="underline--light">Mission statement</h3>
-          <p>Our core objective is to form successful partnerships with owners, managers
-            and other stakeholders to realise the full potential of our portfolio companies
-            while achieving superior returns for the firm‘s&nbsp;investors and partner
-            entrepreneurs.</p>
-        </div>
-        <div
-          class="about--bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3 class="underline--light">Background history</h3>
-          <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
-            leading private equity firm in its segment operating in the Central European
-            region. We’re proud of our 20-year track-record investing in and supporting
-            the growth of mid-sized companies.</p>
-        </div>
+    <div class="column--1">
+      <div class="jahudka">
+        <h3 class="underline--light">Mission statement</h3>
+        <p>Our core objective is to form successful partnerships with owners, managers
+          and other stakeholders to realise the full potential of our portfolio companies
+          while achieving superior returns for the firm‘s&nbsp;investors and partner
+          entrepreneurs.</p>
+      </div>
+    </div>
+    <div class="column--2 about--bg">
+      <div class="boruvka">
+        <h3 class="underline--light">Background history</h3>
+        <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
+          leading private equity firm in its segment operating in the Central European
+          region. We’re proud of our 20-year track-record investing in and supporting
+          the growth of mid-sized companies.</p>
       </div>
     </div>
   </section>
 
   <section class="investments">
-    <div class="mdc-layout-grid layout-arx">
-      <div class="mdc-layout-grid__inner">
-        <div class="investments--bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h3>Facts and figures</h3>
+    <div class="column--1 investments--bg">
+      <div class="broskev">
+        <h3>Facts and figures</h3>
+      </div>
+    </div>
+    <div class="investments--box">
+      <div class="box_row">
+        <div class="white-box">
+          <h4>$4.2B</h4>
+          <p>committed capital under management</p>
         </div>
-        <div class="investments--box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <div class="white-box">
-            <h4>$4.2B</h4>
-            <p>committed capital under management</p>
-          </div>
-          <div class="white-box">
-            <h4>$25M – 1B</h4>
-            <p>committed capital under management</p>
-          </div>
-          <div class="white-box">
-            <h4>$330M</h4>
-            <p>committed capital under management</p>
-          </div>
-          <div class="white-box">
-            <h4>$4B</h4>
-            <p>committed capital under management</p>
-          </div>
-          <div class="white-box">
-            <h4>100+</h4>
-            <p>committed capital under management</p>
-          </div>
+        <div class="white-box">
+          <h4>$25M – 1B</h4>
+          <p>committed capital under management</p>
+        </div>
+        <div class="white-box">
+          <h4>$330M</h4>
+          <p>committed capital under management</p>
+        </div>
+        <div class="white-box">
+          <h4>$4B</h4>
+          <p>committed capital under management</p>
+        </div>
+        <div class="white-box">
+          <h4>100+</h4>
+          <p>committed capital under management</p>
         </div>
       </div>
     </div>
   </section>
+
   <section class="believes">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
@@ -106,18 +106,16 @@
   </section>
 
   <section class="team">
-    <div class="mdc-layout-grid layout-arx">
-      <div class="mdc-layout-grid__inner">
-        <div
-          class="team--bg-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3>Meet our team</h3>
-          <div class="button">
-            <a class="button--info" href="">MORE INFO</a>
-          </div>
+    <div class="column--1">
+      <div class="jahudka">
+        <h3>Meet our team</h3>
+        <div class="button">
+          <a class="button--info" href="">MORE INFO</a>
         </div>
-        <div
-          class="team--bg-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        </div>
+      </div>
+    </div>
+    <div class="column--2">
+      <div class="boruvka">
       </div>
     </div>
   </section>
