--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -7,10 +7,12 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+
+  --arx-layout-max-width: 1333px;
 }
 
 .layout-arx {
-  max-width: 1200px;
+  max-width: var(--arx-layout-max-width);
 }
 
 html {
@@ -119,6 +121,11 @@ html {
     height: 50px;
     border: 5px solid var(--mdc-theme--third);
   }
+}
+
+.column--1, .column--2 {
+  flex-grow: 1;
+  box-sizing: border-box;
 }
 
 /* INTRO */
